test/parser/error_recovery_eof.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:15: error: expected type specifier
fn error() -> {
